--- a/Etonmess.html
+++ b/Etonmess.html
@@ -6,6 +6,7 @@
     <meta name="description" content="A simple recipe for the classic British dessert, Eton Mess, made with meringue, strawberries, and whipped cream.">
     <title>Eton Mess Recipe</title>
     <style>
+        <img src="https://food-images.files.bbci.co.uk/food/recipes/eton_mess_97585_16x9.jpg" alt="EtonMess">
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
