--- a/Etonmess.html
+++ b/Etonmess.html
@@ -50,16 +50,23 @@
 </head>
 <body>
 <img src="eton_mess_97585_16x9.jpg" width="1600" height="900" alt=""/>
-
 <header>
-    <h1>Eton Mess Recipe</h1>
+  <h1>Eton Mess Recipe</h1>
 </header>
 
 <main>
     <section>
-        <h2>About Eton Mess</h2>
-        <p>Eton Mess is a classic British dessert traditionally made with a mixture of crushed meringue, whipped cream, and strawberries. The name "Eton Mess" originates from Eton College, where the dish has been served at the annual cricket match between Eton and Harrow since the 19th century.</p>
+        <h2>Some history of Eton Mess</h2>
+        <p>Eton Mess is a classic British dessert traditionally made with a mixture of crushed meringue, whipped cream, and strawberries. The name "Eton Mess" originates from Eton College, where the dish has been served at the annual cricket match between Eton and Harrow since the 19th century. Eton mess was served in the 1930s in the school's "sock shop" (tuck shop), and was originally made with either strawberries or bananas mixed with ice-cream or cream. Meringue was a later addition.An Eton mess can be made with many other types of summer fruit,but strawberries are regarded as more traditional.</p>
     </section>
+	<section>
+		<h2>Small details</h2>
+		<ul>
+			<li>Prepartion time: 20mins</li>
+			<li>Cook time: 1hr 15mins</li>
+			<li>Serves about 6</li>
+		</ul>
+	</section>
 
     <section class="ingredients">
         <h2>Ingredients</h2>
@@ -90,7 +97,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2024 Eton Mess Recipe | Created by Gabriel Bobadilla for GRA1750-2247-14789</p>
+    <p>&copy; Eton Mess Recipe (gathered from a couple sites and videos)| Created by Gabriel Bobadilla for GRA1750-2247-14789</p>
 </footer>
 
 </body>
