--- a/EtonMessRecipe.html
+++ b/EtonMessRecipe.html
@@ -14,18 +14,18 @@
 
 
 <main><img src="eton_mess_97585_16x9.jpg" width="1400" height="700" alt=""/>
-    <section>
+    <div>
         <h2>Some history of Eton Mess</h2>
-        <p>Eton Mess is a classic British dessert traditionally made with a mixture of crushed meringue, whipped cream, and strawberries. The name "Eton Mess" originates from Eton College, where the dish has been served at the annual cricket match between Eton and Harrow since the 19th century. Eton mess was served in the 1930s in the school's "sock shop" (tuck shop), and was originally made with either strawberries or bananas mixed with ice-cream or cream. Meringue was a later addition.An Eton mess can be made with many other types of summer fruit,but strawberries are regarded as more traditional.</p>
-  </section>
-	<section>
+        <p>Eton Mess is a classic British dessert traditionally made with a mixture of crushed meringue, whipped cream, and strawberries. The name  &ldquo;Eton Mess&rdquo; originates from Eton College, where the dish has been served at the annual cricket match between Eton and Harrow since the 19th century. Eton mess was served in the 1930s in the school&lsquo;s  &ldquo;sock shop&rdquo; (tuck shop), and was originally made with either strawberries or bananas mixed with ice-cream or cream. Meringue was a later addition.An Eton mess can be made with many other types of summer fruit, but strawberries are regarded as more traditional.</p>
+  </div>
+	<aside>
 		<h2>Small details</h2>
 		<ul>
 			<li>Prepartion time: 20mins</li>
 			<li>Cook time: 1hr 15mins</li>
 			<li>Serves about 6</li>
 		</ul>
-	</section>
+	</aside>
 
     <section class="ingredients">
         <h2>Ingredients</h2>
@@ -42,7 +42,7 @@
     <section class="steps">
         <h2>Instructions</h2>
         <ol>
-            <li><strong>Make the meringues:</strong> Preheat your oven to 120°C (100°C fan). Whisk the egg whites until stiff peaks form, then gradually add the caster sugar, whisking until glossy. Spoon the meringue mixture onto a baking tray lined with parchment paper and bake for 1.5 hours. Let cool.</li>
+            <li><strong>Make the meringues:</strong> Preheat your oven to 120&deg;C (100&deg;C fan). Whisk the egg whites until stiff peaks form, then gradually add the caster sugar, whisking until glossy. Spoon the meringue mixture onto a baking tray lined with parchment paper and bake for 1.5 hours. Let cool.</li>
             <li><strong>Whip the cream:</strong> Whip the double cream until soft peaks form. If you like a sweeter dessert, you can fold in the icing sugar at this stage.</li>
             <li><strong>Prepare the strawberries:</strong> Chop the strawberries into small pieces. Reserve a few whole strawberries for garnish if desired.</li>
             <li><strong>Assemble the Eton Mess:</strong> Crush the meringues into bite-sized pieces. In a large serving bowl, gently fold the meringues, whipped cream, and strawberries together. Be careful not to overmix, so the meringue remains crunchy.</li>
@@ -50,9 +50,9 @@
         </ol>
     </section>
 
-    <section class="note">
+    <article class="note">
         <p><strong>Note:</strong> Eton Mess should be assembled just before serving to keep the meringue crispy. You can make the meringue and whip the cream in advance and store them separately.</p>
-    </section>
+    </article>
 </main>
 
 <footer>
